@@ -1,3 +1,9 @@
+Thu, 20 Mar 2008 10:04:14 +0100 <thp@perli.net>
+Filter "None" filenames from GtkFileChooser widgets
+
+	* src/gpodder/config.py: Make sure we don't receive a "None" filename
+	from GtkFileChooser widgets when connecting to the config manager
+
 Wed, 19 Mar 2008 18:06:58 +0100 <thp@perli.net>
 Change the context menu of the episode list popup menu
 
